feat: implementação de funcionalidades front + integração entre as pagínas + integração bakend com frontend